Added Photo page (photo.html) with step-by-step images and descriptive captions, improving user experience and enhancing the visual guidance for the croissant recipe. Implemented navigation links for seamless browsing.
In this commit, I introduced the Photo page (photo.html) to our website, featuring a collection of step-by-step images that visually guide users through the croissant-making process. Each image is accompanied by descriptive captions, providing clear instructions and enhancing user understanding. Additionally, I incorporated navigation links to ensure smooth browsing between the photos and other pages. These additions enrich the overall user experience, making it easier for users to follow along with the croissant recipe and appreciate the visual journey.

--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Learn how to make delicious croissants from scratch with our step-by-step recipe guide. Follow each stage, from making the dough to shaping and baking these buttery pastries. Discover the secrets to achieving a flaky texture and irresistible taste. Our visually appealing tutorial with accompanying images will guide you through each step of the process. Get ready to embark on a culinary adventure and indulge in the joy of homemade croissants."
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe</title>
     <style>
@@ -29,41 +34,55 @@
     <ul>
       <li>
         <div>
-          1- Make the dough with flour, sugar, yeast, salt, butter, and milk.
+          Step 1: Prepare the dough using flour, sugar, yeast, salt, butter, and
+          milk.
         </div>
-        <img src="/images/step-1.jpg" alt="" />
+        <img src="/images/step-1.jpg" alt="Step 1: Prepare the dough" />
       </li>
       <li>
-        <div>2- Chill the dough.</div>
-        <img src="/images/step-2.webp" alt="" />
+        <div>Step 2: Chill the dough to enhance its texture.</div>
+        <img src="/images/step-2.webp" alt="Step 2: Chill the dough" />
       </li>
       <li>
-        <div>3- Roll and fold the dough 4-6 times.</div>
-        <img src="/images/stepp-3.jpg" alt="" />
+        <div>
+          Step 3: Roll and fold the dough multiple times to create layers.
+        </div>
+        <img src="/images/step-3.jpg" alt="Step 3: Roll and fold the dough" />
       </li>
       <li>
-        <div>4- Re-Chill the dough.</div>
-        <img src="/images/step-4.jpg" alt="" />
+        <div>Step 4: Re-chill the dough for optimal results.</div>
+        <img src="/images/step-4.jpg" alt="Step 4: Re-chill the dough" />
       </li>
       <li>
-        <div>5-Roll out the dough to an appropriate thickness.</div>
-        <img src="/images/step-5.jpg" alt="" />
+        <div>Step 5: Roll out the dough to the desired thickness.</div>
+        <img src="/images/step-5.jpg" alt="Step 5: Roll out the dough" />
       </li>
       <li>
-        <div>6- Cut the dough into long skinny triangles.</div>
-        <img src="/images/step-6.jpg" alt="" />
+        <div>Step 6: Cut the dough into long, skinny triangles.</div>
+        <img
+          src="/images/step-6.jpg"
+          alt="Step 6: Cut the dough into triangles"
+        />
       </li>
       <li>
-        <div>7-Roll the triangles into a crescent shape.</div>
-        <img src="/images/step-7.jpg" alt="" />
+        <div>Step 7: Shape the triangles into a crescent form.</div>
+        <img
+          src="/images/step-7.jpg"
+          alt="Step 7: Shape the dough into crescents"
+        />
       </li>
       <li>
-        <div>8- Cover with plastic wrap and let rise.</div>
-        <img src="/images/step-8.jpg" alt="" />
+        <div>
+          Step 8: Cover the croissants with plastic wrap and let them rise.
+        </div>
+        <img
+          src="/images/step-8.jpg"
+          alt="Step 8: Cover the croissants with plastic wrap"
+        />
       </li>
       <li>
-        <div>9- Bake.</div>
-        <img src="/images/step-9.jpg" alt="" />
+        <div>Step 9: Bake the croissants to golden perfection.</div>
+        <img src="/images/step-9.jpg" alt="Step 9: Bake the croissants" />
       </li>
     </ul>
 
