Updated page titles for improved clarity and SEO optimization
Modified the <title> tags in the HTML code to provide more descriptive and SEO-friendly titles for better visibility and search engine ranking. Ensured that the titles accurately reflect the content of the respective pages and enhance the overall user experience.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Discover everything about croissants, the buttery and flaky viennoiserie pastries made from French yeast-leavened laminated dough. Learn about their historical crescent shape, the lamination process that creates the layered and flaky texture, and indulge in the delightful taste of this popular pastry. Explore a step-by-step recipe and find contact information for further inquiries."
     />
-    <title>Everything About Croissant</title>
+    <title>Croissant Chronicles: From Crescent Shape to Heavenly Taste</title>
     <style>
       body {
         background-color: beige;
