--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact Us for Croissant Recipe Assistance</title>
     <style>
       body {
         background-color: beige;
