--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe</title>
+    <title>Croissant Recipe: Step-by-Step Guide.</title>
     <style>
       body {
         background-color: beige;
